1.4.7 (2004/??/??)
	* Make the watching code more efficient (particularly on FreeBSD) and
	  clean it up a bit.
	* Fix bug where old cruft was left under the watch list after 'm'
	  had been used.
	* Allow ^L and ^R to fully refresh the watch list.

1.4.6 (2004/07/03)
	* Fix some signed/unsigned warnings.
	* Fix make install check for PREFIX -> $(PREFIX).
        * Bind with Satan / start using autoconf.
        * Fix a bug in automatic authorization that revealed the username
          and password in ps output, by munging argv using setproctitle()
	  if possible.
        * Fix dgl-create-chroot's copying of terminfo by choosing a sane
          default.
        * Now compiles with Tiny C Compiler.

1.4.5 (2004/06/14)
	* Reset offset if necessary to show at least one game to avoid things
	  like "(15-14 of 14)".
	* Provide several examples for dgl-create-chroot.conf.
	* Backup the savefile before starting nethack to help prevent more
	  lost games. Note this must be explicitly configured in the
	  configuration file.
	* Added ^W for delete word in mygetnstr().
        * Begun generalization of code so that someone can get it to work
          with stuff like Slash'EM etc. more easily.
        * Allow automatic authorization using the USER environment variable
          that one can auto-set in .telnetrc. Idea by Jeremy Chadwick
          <jdc@parodius.com>.
        * Enable NHEXT and NHAUTH support for Slash'EM, contributed by
          J. Ali Harlow <ali@juiblex.co.uk>.

1.4.4 (2004/03/07)
	* Show total number of games in progress below the list, useful if
	  there are more than fits on the screen.
	* Use client-supplied window size again; try to detect broken
	  clients and force them to 80x24.
	* Pass window size to watchers via inprogress file; show it on the
	  list.
	* Selecting a game to watch with an uppercase letter attempts to
	  change the window size to the game's via the \033[8;<r>;<c>t
	  sequence.